--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
         socket.on('connect', function () {
             console.log('Conectado al servidor')
-        })
+        });
 
         socket.on('disconnect', function () {
             console.log('Perdimos coneción con el servidor')
@@ -27,11 +27,16 @@
 
         socket.on('mensaje', (payload) => {
             console.log('Escuchando: ', payload);
-        })
+        });
 
         socket.on('nuevo-mensaje', (payload) => {
             console.log('Emitiendo mensaje desde Flutter: ', payload);
-        })
+        });
+
+        socket.on('active-bands', (payload) => {
+            console.clear();
+            console.table(payload);
+        });
 
     </script>
 
